# numeric_test_cpp

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.cache/clangd/index/: Config-Name.ixx.DC073EAF64115290.idx  Config-Types.ixx.ED5CDBA9548F85DD.idx  Config.ixx.8CD7518745A44463.idx  base.h.8901A72050EDF60B.idx  color.h.28DE2E087C291458.idx  core.h.2A7C036D7BC2E7A1.idx  format-inl.h.721AEA889C367A8F.idx  format.cc.F907A7B693D9C1F3.idx  format.h.669D387738C0FE0D.idx  main.cpp.7FB3D00DD78F1DF3.idx  math-calculus.ixx.6300287D9995B5DE.idx  math-compose.ixx.CBFF0992F0C4BD4C.idx  math-functions.ixx.7E86276FE346B67A.idx  math-ncrnpr.ixx.FAF47A4E997E1B57.idx  math-numeric.ixx.B701168AEA4EB7B1.idx  math-trigonometric.ixx.357E2642310676DE.idx  math-variable.ixx.0CC661D37FB1CC3A.idx  math.ixx.46FF57925142D632.idx  matrix.ixx.A5EC21AA9FF7FDB3.idx  matrix2d.ixx.817E71BD7080B0A9.idx  os.cc.DC4FDB0D1253A85B.idx  os.h.57B5DE9C0AACF646.idx  output.hpp.6DE769607FD98C7B.idx  ranges.h.89472D15494AC6A5.idx  std_input.hpp.3A1D1B57BEE2E61E.idx
.github/workflows/: ci.yml
cmake/: cpm.cmake  dev-mode.cmake  install-rules.cmake  thirdparty.cmake  variables.cmake
import/: CMakeLists.txt  parallel.hpp  types_value.hpp
import/Config/: CMakelists.txt  Config-Name.ixx  Config-Types.ixx
import/Math/: CMakelists.txt  math-calculus.ixx  math-compose.ixx  math-fft.ixx  math-functions.ixx  math-ncrnpr.ixx  math-numeric.ixx  math-numerical.ixx  math-variable.ixx  math.ixx
import/Matrix/: matrix.ixx  matrix2d.ixx  matrix_2d.hpp
import/headers/: ncrnpr.hpp  output.hpp  std_input.hpp
mod/: CMakeLists.txt
mod/Config/: CMakeLists.txt  Config-Name.ixx  Config-Types.ixx  Config.ixx
mod/Math/: CMakeLists.txt  math-base.ixx  math-calculus.ixx  math-compose.ixx  math-fft.ixx  math-functions.ixx  math-ncrnpr.ixx  math-numerical.ixx  math-variable.ixx  math.ixx  matrix2d.ixx
mod/Matrix/: CMakeLists.txt  matrix.ixx  matrix2d.ixx
mod/headers/: output.hpp  std_input.hpp
mod/parallel/: CMakeLists.txt  parallel-blocked_range.ixx  parallel-for.ixx  parallel-for_each.ixx  parallel-reduce.ixx  parallel.ixx
source/: CMakeLists.txt
test/: CMakeLists.txt  fft_test.cpp  lambda_impl.cpp  main.cpp  numeric2.cpp  test_householder.cpp  test_parallel.cpp  testmatrix.cpp  window_test.cpp
